--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         type="image/x-icon"
         href="./static/images/favicon.ico"/>
 
-  <title>HyperNeRF: A Higher-Dimensional Representation for Topologically Varying Neural Radiance
+  <title>RobustSAM: Segment Anything Robustly on Degraded Images
     Fields</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
