--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         href="./static/images/favicon.ico"/>
 
   <title>RobustSAM: Segment Anything Robustly on Degraded Images
-    Fields</title>
+    </title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-EDF010G6PN"></script>
@@ -105,61 +105,21 @@
       </div>
       <div class="container has-text-centered">
         <h1 class="title is-1 publication-title">
-          A Higher-Dimensional Representation<br/>for Topologically Varying Neural Radiance Fields
+          RobustSAM: Segment Anything Robustly on Degraded Images
         </h1>
         <div class="is-size-5 publication-authors">
           <div class="author-block">
-            <div class="author-portrait">
-              <img src="./static/images/portraits/keunhong_rgb.128.gif" class="rgb preload" />
-              <img src="./static/images/portraits/keunhong_depth.128.gif" class="depth preload" />
-            </div>
             <a href="https://keunhong.com">Keunhong Park</a><sup>1,2</sup></div>
           <div class="author-block">
-            <div class="author-portrait">
-              <img src="./static/images/portraits/utsinh_rgb.128.gif" class="rgb preload" />
-              <img src="./static/images/portraits/utsinh_depth.128.gif" class="depth preload" />
-            </div>
             <a href="https://utkarshsinha.com">Utkarsh Sinha</a><sup>2</sup></div>
           <div class="author-block">
-            <div class="author-portrait">
-              <img src="./static/images/portraits/hedman_rgb.128.gif" class="rgb preload" />
-              <img src="./static/images/portraits/hedman_depth.128.gif" class="depth preload" />
-            </div>
             <a href="https://phogzone.com/">Peter Hedman</a><sup>2</sup></div>
           <div class="author-block">
-            <div class="author-portrait">
-              <img src="./static/images/portraits/barron_rgb.128.gif" class="rgb preload" />
-              <img src="./static/images/portraits/barron_depth.128.gif" class="depth preload" />
-            </div>
             <a href="https://jonbarron.info">Jonathan T. Barron</a><sup>2</sup>
           </div>
           <div class="author-block">
             <div class="author-portrait">
-              <img src="./static/images/portraits/sofien_rgb.128.gif" class="rgb preload" />
-              <img src="./static/images/portraits/sofien_depth.128.gif" class="depth preload" />
-            </div>
             <a href="http://sofienbouaziz.com">Sofien Bouaziz</a><sup>2</sup>
-          </div>
-          <div class="author-block">
-            <div class="author-portrait">
-              <img src="./static/images/portraits/dgo_rgb.128.gif" class="rgb preload" />
-              <img src="./static/images/portraits/dgo_depth.128.gif" class="depth preload" />
-            </div>
-            <a href="https://www.danbgoldman.com">Dan B Goldman</a><sup>2</sup>
-          </div>
-          <div class="author-block">
-            <div class="author-portrait">
-              <img src="./static/images/portraits/rmbrualla_rgb.128.gif" class="rgb preload" />
-              <img src="./static/images/portraits/rmbrualla_depth.128.gif" class="depth preload" />
-            </div>
-            <a href="http://www.ricardomartinbrualla.com">Ricardo Martin-Brualla</a><sup>2</sup>
-          </div>
-          <div class="author-block">
-            <div class="author-portrait">
-              <img src="./static/images/portraits/smseitz_rgb.128.gif" class="rgb preload" />
-              <img src="./static/images/portraits/smseitz_depth.128.gif" class="depth preload" />
-            </div>
-            <a href="https://homes.cs.washington.edu/~seitz/">Steven M. Seitz</a><sup>1,2</sup>
           </div>
         </div>
 
