--- a/index.html
+++ b/index.html
@@ -108,19 +108,15 @@
           RobustSAM: Segment Anything Robustly on Degraded Images
         </h1>
         <div class="is-size-5 publication-authors">
-          <div class="author-block">
-            <a href="https://keunhong.com">Keunhong Park</a><sup>1,2</sup></div>
-          <div class="author-block">
+          <div class="author-block"> Wei-Ting Chen <sup>1,2</sup></div>
+          <div class="author-block"> Yu-Jiet Vong <sup>1,2</sup></div>
+          <div class="author-block"> Sy-Yen Kuo<sup>1,2</sup></div>
+          <div class="author-block">Sizhou Ma<sup>1,2</sup></div>
+          <div class="author-block"> Jian Wang<sup>1,2</sup></div>
+<!--           <div class="author-block">
             <a href="https://utkarshsinha.com">Utkarsh Sinha</a><sup>2</sup></div>
-          <div class="author-block">
-            <a href="https://phogzone.com/">Peter Hedman</a><sup>2</sup></div>
-          <div class="author-block">
-            <a href="https://jonbarron.info">Jonathan T. Barron</a><sup>2</sup>
-          </div>
-          <div class="author-block">
-            <div class="author-portrait">
-            <a href="http://sofienbouaziz.com">Sofien Bouaziz</a><sup>2</sup>
-          </div>
+          <div class="author-block"> -->
+<!--             <a href="https://phogzone.com/">Peter Hedman</a><sup>2</sup></div> -->
         </div>
 
         <div class="is-size-5 publication-authors">
