--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
           RobustSAM: Segment Anything Robustly on Degraded Images
         </h1>
         <div class="is-size-5 publication-authors">
-          <div class="author-block"> Wei-Ting Chen <sup>1,2</sup></div>
-          <div class="author-block"> Yu-Jiet Vong <sup>1,2</sup></div>
-          <div class="author-block"> Sy-Yen Kuo<sup>1,2</sup></div>
-          <div class="author-block">Sizhou Ma<sup>1,2</sup></div>
-          <div class="author-block"> Jian Wang<sup>1,2</sup></div>
+          <div class="author-block"> Wei-Ting Chen <sup>1</sup></div>
+          <div class="author-block"> Yu-Jiet Vong <sup>1</sup></div>
+          <div class="author-block"> Sy-Yen Kuo <sup>1</sup></div>
+          <div class="author-block"> Sizhou Ma <sup>2</sup></div>
+          <div class="author-block"> Jian Wang <sup>2</sup></div>
 <!--           <div class="author-block">
             <a href="https://utkarshsinha.com">Utkarsh Sinha</a><sup>2</sup></div>
           <div class="author-block"> -->
@@ -120,8 +120,8 @@
         </div>
 
         <div class="is-size-5 publication-authors">
-          <span class="author-block"><sup>1</sup>University of Washington,</span>
-          <span class="author-block"><sup>2</sup>Google Research</span>
+          <span class="author-block"><sup>1</sup>National Taiwan University,</span>
+          <span class="author-block"><sup>2</sup>Snap Inc.</span>
         </div>
 
         <div class="column has-text-centered">
