--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="description"
+<!--   <meta name="description"
         content="HyperNeRF handles topological variations by modeling a family of shapes in a higher-dimensional space, thereby producing more realistic renderings and more accurate geometric reconstructions.">
   <meta name="keywords" content="HyperNeRF, Nerfies, D-NeRF, NeRF">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,7 +10,7 @@
   <link rel="image_src" href="./static/images/thumbnail.png">
   <link rel="icon"
         type="image/x-icon"
-        href="./static/images/favicon.ico"/>
+        href="./static/images/favicon.ico"/> -->
 
   <title>RobustSAM: Segment Anything Robustly on Degraded Images
     </title>
@@ -90,7 +90,7 @@
           <div class="publication-links">
             <!-- PDF Link. -->
             <span class="link-block">
-                <a href="https://arxiv.org/pdf/2106.13228.pdf"
+                <a href="https://github.com/robustsam/RobustSAM" 
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -99,7 +99,7 @@
                 </a>
               </span>
             <span class="link-block">
-                <a href="https://arxiv.org/abs/2106.13228"
+                <a href="https://github.com/robustsam/RobustSAM" 
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -108,7 +108,7 @@
                 </a>
             </span>
             <span class="link-block">
-              <a href="https://github.com/google/hypernerf"
+              <a href="https://github.com/robustsam/RobustSAM" 
                  class="external-link button is-normal is-rounded is-dark">
                 <span class="icon">
                     <i class="fab fa-github"></i>
@@ -118,7 +118,7 @@
             </span>
             <!-- Dataset Link. -->
             <span class="link-block">
-              <a href="https://github.com/google/hypernerf/releases/tag/v0.1"
+              <a href="https://github.com/robustsam/RobustSAM" 
                  class="external-link button is-normal is-rounded is-dark">
                 <span class="icon">
                     <i class="far fa-images"></i>
