--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
           RobustSAM: Segment Anything Robustly on Degraded Images
         </h1>
         <div class="is-size-5 publication-authors">
-          <div class="author-block"> Wei-Ting Chen <sup>1</sup></div>
-          <div class="author-block"> Yu-Jiet Vong <sup>1</sup></div>
-          <div class="author-block"> Sy-Yen Kuo <sup>1</sup></div>
-          <div class="author-block"> Sizhou Ma <sup>2</sup></div>
-          <div class="author-block"> Jian Wang <sup>2</sup></div>
+          <div class="author-block"><a href="https://github.com/robustsam/RobustSAM">Wei-Ting Chen</a> <sup>1</sup></div>
+          <div class="author-block"><a href="https://github.com/robustsam/RobustSAM"> Yu-Jiet Vong</a> <sup>1</sup></div>
+          <div class="author-block"><a href="https://github.com/robustsam/RobustSAM"> Sy-Yen Kuo</a> <sup>1</sup></div>
+          <div class="author-block"><a href="https://github.com/robustsam/RobustSAM"> Sizhou Ma</a> <sup>2</sup></div>
+          <div class="author-block"><a href="https://github.com/robustsam/RobustSAM"> Jian Wang</a> <sup>2</sup></div>
 <!--           <div class="author-block">
             <a href="https://utkarshsinha.com">Utkarsh Sinha</a><sup>2</sup></div>
           <div class="author-block"> -->
