--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 
   gtag('config', 'G-EDF010G6PN');
 
-
   </script>
 
   <script type="module"
@@ -60,11 +59,11 @@
 <section class="hero">
   <div class="hero-body">
     <div class="container">
-      <div class="columns is-centered">
+<!--       <div class="columns is-centered">
         <div class="column is-4 has-text-centered">
           <img src="static/images/logo.svg" alt="HyperNeRF"/>
         </div>
-      </div>
+      </div> -->
       <div class="container has-text-centered">
         <h1 class="title is-1 publication-title">
           RobustSAM: Segment Anything Robustly on Degraded Images
@@ -136,14 +135,15 @@
 <section class="hero teaser">
   <div class="hero-body">
     <div class="container is-max-desktop">
-      <video id="teaser" autoplay controls muted loop playsinline height="100%">
+<!--       <video id="teaser" autoplay controls muted loop playsinline height="100%">
         <source src="./static/images/teaser.mp4"
                 type="video/mp4">
-      </video>
+      </video> -->
       <h2 class="subtitle has-text-centered">
-        <i>HyperNeRF</i> handles topological variations by modeling a
+             <i>RobustSAM</i> outperfroms SAM in various degradations.
+<!--         <i>RobustSAM</i> handles topological variations by modeling a
         family of shapes in a higher-dimensional space, thereby producing more realistic renderings
-        and more accurate geometric reconstructions.
+        and more accurate geometric reconstructions. -->
       </h2>
     </div>
   </div>
