--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     <div class="container has-text-centered">
       <div id="results-carousel" class="carousel results-carousel">
 
-        <div>
+<!--         <div>
           <div class="results-item">
             <video poster="" id="espresso-rgb" autoplay controls muted loop playsinline height="100%">
               <source src="./static/videos/espresso_rgb.mp4"
@@ -166,9 +166,9 @@
                       type="video/mp4">
             </video>
           </div>
-        </div>
+        </div> -->
 
-        <div>
+<!--         <div>
           <div class="results-item">
             <video poster="" id="split-cookie-rgb" autoplay controls muted loop playsinline height="100%">
               <source src="./static/videos/split-cookie_rgb.mp4"
@@ -179,9 +179,9 @@
                       type="video/mp4">
             </video>
           </div>
-        </div>
+        </div> -->
 
-        <div>
+<!--         <div>
           <div class="results-item">
             <video poster="" id="3dprinter-rgb" autoplay controls muted loop playsinline height="100%">
               <source src="./static/videos/3dprinter_rgb.mp4"
@@ -218,7 +218,7 @@
                       type="video/mp4">
             </video>
           </div>
-        </div>
+        </div> -->
 
       </div>
 
@@ -253,6 +253,8 @@
             Nonetheless, its performance is challenged by images with degraded quality. Addressing this 
             limitation, we propose the Robust Segment Anything Model (RobustSAM), which enhances SAM's 
             performance on low-quality images while preserving its promptability and zero-shot generalization. 
+          </p>
+          <p>
             Our method leverages the pre-trained SAM model with only marginal parameter increments and computational requirements. 
             The additional parameters of RobustSAM can be optimized within 30 hours on eight GPUs, demonstrating 
             its feasibility and practicality for typical research laboratories. We also introduce the Robust-Seg dataset, 
@@ -261,7 +263,7 @@
             especially under zero-shot conditions, underscoring its potential for extensive real-world application. Additionally, 
             our method has been shown to effectively improve the performance of SAM-based downstream tasks such as single 
             image dehazing and deblurring. 
-          </p>
+          </p> 
 <!--           <p>
             We address this limitation by lifting
             NeRFs into a higher dimensional space, and by representing the 5D radiance field
