--- a/index.html
+++ b/index.html
@@ -219,17 +219,18 @@
             </video>
           </div>
         </div> -->
+        <img src="./static/figures/level_set/0.svg"/>
+        <img src="./static/figures/level_set/1.svg"/>
+        <img src="./static/figures/level_set/2.svg"/>
 
       </div>
 
       <div class="columns is-centered has-text-centered">
         <div class="column is-three-quarters">
           <p>
-            Here we show results generated with <i>HyperNeRF</i>. These videos show the input video
-            being
-            played
-            back with a stabilized novel camera path. The right side video shows the depth of the
-            scene.
+            <i>RobustSAM </i> outperforms with precise boundaries and
+            intact structures, where SAM falters with errors and fragmentation.
+            Red star points and bounding boxes are our examples' input prompts.
             Click on the arrows or drag to see more results.
           </p>
         </div>
