--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
     <h2 class="title is-3">Motivation</h2>
     <div class="columns is-centered">
       <!-- Level Sets. -->
-      <div class="column is-half">
+<!--       <div class="column is-half">
         <div class="content">
           <h3 class="title is-4">Level-Set Methods</h3>
           <div class="level-set has-text-justified">
@@ -340,7 +340,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
       <!--/ Level Sets. -->
 
       <div class="column is-half">
