--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
       </div> -->
       <!--/ Level Sets. -->
 
-      <div class="column is-half">
+<!--       <div class="column is-half">
         <div class="content has-text-justified">
           <h3 class="is-4">Slicing Surfaces</h3>
           <p>
@@ -377,7 +377,7 @@
       </div>
 
     </div>
-  </div> -->
+  </div> --> -->
 
 
   <div class="container is-max-desktop">
