--- a/index.html
+++ b/index.html
@@ -390,12 +390,14 @@
         clear images by the original SAM. 
       </p>
       <div class="has-text-centered">
-        <embed src="./robustsam_file/architecture.pdf" width="800px" height="2100px" />
-<!--         <img style="width: 90%;" src="./robustsam_file/architecture.pdf"
-             alt="RobustSAM architecture."/> -->
+<!--         <embed src="./robustsam_file/architecture.pdf" width="800px" height="2100px" /> -->
+        <img style="width: 90%;" src="./robustsam_file/architecture.jpg"
+             alt="RobustSAM architecture."/>
       </div>
       <h3 class="title is-4">Overview of the proposed AMFG and AOTG modules</h3>
-      <embed src="./robustsam_file/sytle-suppresion.pdf" width="800px" height="2100px" />
+<!--       <embed src="./robustsam_file/style-suppresion.pdf" width="800px" height="2100px" /> -->
+        <img style="width: 90%;" src="./robustsam_file/module.jpg"
+             alt="AMFG and AOTG modules."/>
       
 <!--       <p>
         HyperNeRF leverages main idea of level set methods by using a template NeRF which lives in
@@ -463,10 +465,10 @@
 <footer class="footer">
   <div class="container">
     <div class="content has-text-centered">
-      <a class="icon-link" href="https://arxiv.org/pdf/2106.13228.pdf">
+      <a class="icon-link" href="https://github.com/robustsam/RobustSAM">
         <i class="fas fa-file-pdf"></i>
       </a>
-      <a class="icon-link" href="https://github.com/keunhong" class="external-link" disabled>
+      <a class="icon-link" href="https://github.com/robustsam/RobustSAM" class="external-link" disabled>
         <i class="fab fa-github"></i>
       </a>
     </div>
