--- a/index.html
+++ b/index.html
@@ -219,9 +219,10 @@
             </video>
           </div>
         </div> -->
-        <img src="./static/figures/level_set/0.svg"/>
-        <img src="./static/figures/level_set/1.svg"/>
-        <img src="./static/figures/level_set/2.svg"/>
+        <img src="./robustsam_file/gif_output/blur.gif"/>
+        <img src="./robustsam_file/gif_output/haze.gif"/>
+        <img src="./robustsam_file/gif_output/lowlight.gif"/>
+        <img src="./robustsam_file/gif_output/rain.gif"/>
 
       </div>
 
