--- a/index.html
+++ b/index.html
@@ -219,10 +219,10 @@
             </video>
           </div>
         </div> -->
-        <img src="./robustsam_file/gif_output/blur.gif"/>
-        <img src="./robustsam_file/gif_output/haze.gif"/>
-        <img src="./robustsam_file/gif_output/lowlight.gif"/>
-        <img src="./robustsam_file/gif_output/rain.gif"/>
+        <img style="width: 90%;" src="./robustsam_file/gif_output/blur_back_n_forth.gif"/>
+        <img style="width: 90%;" src="./robustsam_file/gif_output/haze_back_n_forth.gif"/>
+        <img style="width: 90%;" src="./robustsam_file/gif_output/lowlight_back_n_forth.gif"/>
+        <img style="width: 90%;" src="./robustsam_file/gif_output/rain_back_n_forth.gif"/>
 
       </div>
 
