--- a/index.html
+++ b/index.html
@@ -219,10 +219,10 @@
             </video>
           </div>
         </div> -->
-        <img style="width: 50%;" src="./robustsam_file/gif_output/blur_back_n_forth.gif"/>
-        <img style="width: 50%;" src="./robustsam_file/gif_output/haze_back_n_forth.gif"/>
-        <img style="width: 50%;" src="./robustsam_file/gif_output/lowlight_back_n_forth.gif"/>
-        <img style="width: 50%;" src="./robustsam_file/gif_output/rain_back_n_forth.gif"/>
+        <img src="./robustsam_file/gif_output/blur_back_n_forth.gif" width="640" height="480">
+        <img src="./robustsam_file/gif_output/haze_back_n_forth.gif" width="640" height="480">
+        <img src="./robustsam_file/gif_output/lowlight_back_n_forth.gif" width="640" height="480">
+        <img src="./robustsam_file/gif_output/rain_back_n_forth.gif" width="640" height="480">
 
       </div>
 
