--- a/index.html
+++ b/index.html
@@ -383,21 +383,21 @@
 
   <div class="container is-max-desktop">
     <div class="content has-text-justified">
-      <h2 class="title is-3">RobustSAM</h2>
+      <h2 class="title is-3">Architecture of RobustSAM</h2>
       <p>
-        Figure below gives an overview of the proposed RobustSAM. The key contribution of RobustSAM 
-        is the Anti-Degradation Output Token Generation (AOTG) and Anti-Degradation Mask Feature Generation 
-        (AMFG) modules, which extract degradation-invariant information that is aligned those extracted from 
+        The key contribution of RobustSAM 
+        is the <b>Anti-Degradation Output Token Generation (AOTG)</b> and <b>Anti-Degradation Mask Feature Generation 
+        (AMFG)</b> modules, which extract degradation-invariant information that is aligned those extracted from 
         clear images by the original SAM. 
       </p>
       <div class="has-text-centered">
 <!--         <embed src="./robustsam_file/architecture.pdf" width="800px" height="2100px" /> -->
-        <img style="width: 90%;" src="./robustsam_file/architecture.jpg"
+        <img style="width: 100%;" src="./robustsam_file/architecture.jpg"
              alt="RobustSAM architecture."/>
       </div>
       <h3 class="title is-4">Overview of the proposed AMFG and AOTG modules</h3>
 <!--       <embed src="./robustsam_file/style-suppresion.pdf" width="800px" height="2100px" /> -->
-        <img style="width: 90%;" src="./robustsam_file/module.jpg"
+        <img style="width: 100%;" src="./robustsam_file/module.jpg"
              alt="AMFG and AOTG modules."/>
       
 <!--       <p>
