--- a/index.html
+++ b/index.html
@@ -220,9 +220,9 @@
           </div>
         </div> -->
         <img class="animated-gif" src="./robustsam_file/gif_output/blur_back_n_forth.gif">
-        <img src="./robustsam_file/gif_output/haze_back_n_forth.gif" width="640" height="480">
-        <img src="./robustsam_file/gif_output/lowlight_back_n_forth.gif" width="640" height="480">
-        <img src="./robustsam_file/gif_output/rain_back_n_forth.gif" width="640" height="480">
+        <img class="animated-gif" src="./robustsam_file/gif_output/haze_back_n_forth.gif" width="640" height="480">
+        <img class="animated-gif" src="./robustsam_file/gif_output/lowlight_back_n_forth.gif" width="640" height="480">
+        <img class="animated-gif" src="./robustsam_file/gif_output/rain_back_n_forth.gif" width="640" height="480">
 
       </div>
 
