--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
                       type="video/mp4">
             </video>
           </div>
-        </div> -->
-
+        </div>
+ -->
 <!--         <div>
           <div class="results-item">
             <video poster="" id="split-cookie-rgb" autoplay controls muted loop playsinline height="100%">
@@ -219,10 +219,10 @@
             </video>
           </div>
         </div> -->
-        <img class="animated-gif" src="./robustsam_file/gif_output/blur_back_n_forth.gif">
-        <img class="animated-gif" src="./robustsam_file/gif_output/haze_back_n_forth.gif" >
-        <img class="animated-gif" src="./robustsam_file/gif_output/lowlight_back_n_forth.gif" >
-        <img class="animated-gif" src="./robustsam_file/gif_output/rain_back_n_forth.gif" >
+        <div><img class="animated-gif" src="./robustsam_file/gif_output/blur_back_n_forth.gif"></div>
+        <div><img class="animated-gif" src="./robustsam_file/gif_output/haze_back_n_forth.gif" ></div>
+        <div><img class="animated-gif" src="./robustsam_file/gif_output/lowlight_back_n_forth.gif" ></div>
+        <div><img class="animated-gif" src="./robustsam_file/gif_output/rain_back_n_forth.gif" ></div>
 
       </div>
 
