--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     <div class="container has-text-centered">
       <div id="results-carousel" class="carousel results-carousel">
 
-<!--         <div>
+        <div>
           <div class="results-item">
             <video poster="" id="espresso-rgb" autoplay controls muted loop playsinline height="100%">
               <source src="./static/videos/espresso_rgb.mp4"
@@ -167,7 +167,7 @@
             </video>
           </div>
         </div>
- -->
+
 <!--         <div>
           <div class="results-item">
             <video poster="" id="split-cookie-rgb" autoplay controls muted loop playsinline height="100%">
