--- a/index.html
+++ b/index.html
@@ -220,24 +220,16 @@
           </div>
         </div> -->
         <div>
-          <div class="results-item">
-            <img class="animated-gif" src="./robustsam_file/gif_output/blur.gif">
-          </div>
+          <div class="animated-gif" src="./robustsam_file/gif_output/blur.gif"></div>
         </div>
         <div>
-          <div class="results-item">
-            <img class="animated-gif" src="./robustsam_file/gif_output/haze_back_n_forth.gif" >
-          </div>
+          <div class="animated-gif" src="./robustsam_file/gif_output/haze_back_n_forth.gif" ></div>
         </div>
         <div>
-          <div class="results-item">
-            <img class="animated-gif" src="./robustsam_file/gif_output/lowlight_back_n_forth.gif" >          
-          </div>
+          <div class="animated-gif" src="./robustsam_file/gif_output/lowlight_back_n_forth.gif" ></div>
         </div>
         <div>
-          <div class="results-item">
-            <img class="animated-gif" src="./robustsam_file/gif_output/rain_back_n_forth.gif" >          
-          </div>
+          <div class="animated-gif" src="./robustsam_file/gif_output/rain_back_n_forth.gif" ></div>
         </div>
 
       </div>
