--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@
             </video>
           </div>
         </div> -->
+        <img src="./static/figures/level_set/0.svg"/>
         <div>
           <div class="animated-gif" src="./robustsam_file/gif_output/blur.gif"></div>
         </div>
