--- a/index.html
+++ b/index.html
@@ -220,14 +220,14 @@
           </div>
         </div> -->
 <!--         <img src="./static/figures/level_set/0.svg"/> -->
-        <img src="./robustsam_file/gif_output/blur.gif"/>
+<!--         <img src="./robustsam_file/gif_output/blur.gif"/>
         <img src="./robustsam_file/gif_output/haze_back_n_forth.gif"/>
         <img src="./robustsam_file/gif_output/lowlight_back_n_forth.gif"/>
-        <img src="./robustsam_file/gif_output/rain_back_n_forth.gif"/>
-<!--         <div class="animated-gif" src="./robustsam_file/gif_output/blur.gif"></div>
+        <img src="./robustsam_file/gif_output/rain_back_n_forth.gif"/> -->
+        <div class="animated-gif" src="./robustsam_file/gif_output/blur.gif"></div>
         <div class="animated-gif" src="./robustsam_file/gif_output/haze_back_n_forth.gif" ></div>
         <div class="animated-gif" src="./robustsam_file/gif_output/lowlight_back_n_forth.gif" ></div>
-        <div class="animated-gif" src="./robustsam_file/gif_output/rain_back_n_forth.gif" ></div> -->
+        <div class="animated-gif" src="./robustsam_file/gif_output/rain_back_n_forth.gif" ></div>
 
       </div>
 
