--- a/index.html
+++ b/index.html
@@ -224,10 +224,18 @@
         <img src="./robustsam_file/gif_output/haze_back_n_forth.gif"/>
         <img src="./robustsam_file/gif_output/lowlight_back_n_forth.gif"/>
         <img src="./robustsam_file/gif_output/rain_back_n_forth.gif"/> -->
-        <div class="animated-gif" src="./robustsam_file/gif_output/blur.gif"></div>
-        <div class="animated-gif" src="./robustsam_file/gif_output/haze_back_n_forth.gif" ></div>
-        <div class="animated-gif" src="./robustsam_file/gif_output/lowlight_back_n_forth.gif" ></div>
-        <div class="animated-gif" src="./robustsam_file/gif_output/rain_back_n_forth.gif" ></div>
+        <div class="results-item">
+          <div class="animated-gif" src="./robustsam_file/gif_output/blur.gif"></div>
+        </div>
+        <div class="results-item">
+          <div class="animated-gif" src="./robustsam_file/gif_output/haze_back_n_forth.gif" ></div>
+        </div>
+        <div class="results-item">
+          <div class="animated-gif" src="./robustsam_file/gif_output/lowlight_back_n_forth.gif" ></div>
+        </div>
+        <div class="results-item">
+          <div class="animated-gif" src="./robustsam_file/gif_output/rain_back_n_forth.gif" ></div>
+        </div>
 
       </div>
 
