--- a/index.html
+++ b/index.html
@@ -225,16 +225,16 @@
         <img src="./robustsam_file/gif_output/lowlight_back_n_forth.gif"/>
         <img src="./robustsam_file/gif_output/rain_back_n_forth.gif"/> -->
         <div class="results-item">
-          <div class="custom-gif" src="./robustsam_file/gif_output/blur.gif"></div>
+          <img class="custom-gif" src="./robustsam_file/gif_output/blur.gif"/>
         </div>
         <div class="results-item">
-          <div class="custom-gif" src="./robustsam_file/gif_output/haze_back_n_forth.gif" ></div>
+          <img class="custom-gif" src="./robustsam_file/gif_output/haze_back_n_forth.gif"/>
         </div>
         <div class="results-item">
-          <div class="custom-gif" src="./robustsam_file/gif_output/lowlight_back_n_forth.gif" ></div>
+          <img class="custom-gif" src="./robustsam_file/gif_output/lowlight_back_n_forth.gif"/>
         </div>
         <div class="results-item">
-          <div class="custom-gif" src="./robustsam_file/gif_output/rain_back_n_forth.gif" ></div>
+          <img class="custom-gif" src="./robustsam_file/gif_output/rain_back_n_forth.gif"/>
         </div>
 
       </div>
