--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
 <section class="hero is-dark is-small">
   <div class="hero-body">
-    <div class="container has-text-centered">
+    <div class="hero is-dark is-small"">
       <div id="results-carousel" class="carousel results-carousel">
 
 <!--         <div>
