--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
 </section>
 
 
-<section class="hero is-dark is-small">
+<!-- <section class="hero is-dark is-small">
   <div class="hero-body">
     <div class="hero is-dark is-small"">
-      <div id="results-carousel" class="carousel results-carousel">
+      <div id="results-carousel" class="carousel results-carousel"> -->
 
 <!--         <div>
           <div class="results-item">
@@ -237,7 +237,7 @@
           <img class="custom-gif" src="./robustsam_file/gif_output/rain_back_n_forth.gif">
         </div>
 
-      </div>
+<!--       </div> -->
 
       <div class="columns is-centered has-text-centered">
         <div class="column is-three-quarters">
@@ -249,9 +249,9 @@
           </p>
         </div>
       </div>
-    </div>
+<!--     </div>
   </div>
-</section>
+</section> -->
 
 
 <section class="section">
