--- a/index.html
+++ b/index.html
@@ -139,12 +139,12 @@
         <source src="./static/images/teaser.mp4"
                 type="video/mp4">
       </video> -->
-      <h2 class="subtitle has-text-centered">
-             <i>RobustSAM</i> outperfroms SAM in various degradations.
+<!--       <h2 class="subtitle has-text-centered"> -->
+<!--              <i>RobustSAM</i> outperfroms SAM in various degradations. -->
 <!--         <i>RobustSAM</i> handles topological variations by modeling a
         family of shapes in a higher-dimensional space, thereby producing more realistic renderings
         and more accurate geometric reconstructions. -->
-      </h2>
+<!--       </h2> -->
     </div>
   </div>
 </section>
@@ -226,14 +226,10 @@
         <img src="./robustsam_file/gif_output/rain_back_n_forth.gif"/> -->
         <div class="img-container">
           <img class="custom-gif" src="./robustsam_file/gif_output/blur_back_n_forth.gif">
-        </div>
-        <div class="img-container">
           <img class="custom-gif" src="./robustsam_file/gif_output/haze_back_n_forth.gif">
         </div>
         <div class="img-container">
           <img class="custom-gif" src="./robustsam_file/gif_output/lowlight_back_n_forth.gif">
-        </div>
-        <div class="img-container">
           <img class="custom-gif" src="./robustsam_file/gif_output/rain_back_n_forth.gif">
         </div>
 
