--- a/index.html
+++ b/index.html
@@ -69,17 +69,19 @@
           RobustSAM: Segment Anything Robustly on Degraded Images
         </h1>
         <div class="is-size-5 publication-authors">
-          <div class="author-block"><a href="https://github.com/robustsam/RobustSAM">Wei-Ting Chen</a> <sup>1</sup></div>
+          <div class="author-block"><a href="https://sites.google.com/view/weitingchen/home">Wei-Ting Chen</a> <sup>1,2</sup></div>
           <div class="author-block"><a href="https://github.com/robustsam/RobustSAM"> Yu-Jiet Vong</a> <sup>1</sup></div>
-          <div class="author-block"><a href="https://github.com/robustsam/RobustSAM"> Sy-Yen Kuo</a> <sup>1</sup></div>
-          <div class="author-block"><a href="https://github.com/robustsam/RobustSAM"> Sizhou Ma</a> <sup>2</sup></div>
-          <div class="author-block"><a href="https://github.com/robustsam/RobustSAM"> Jian Wang</a> <sup>2</sup></div>
-<!--           <div class="author-block">
-            <a href="https://utkarshsinha.com">Utkarsh Sinha</a><sup>2</sup></div>
-          <div class="author-block"> -->
-<!--             <a href="https://phogzone.com/">Peter Hedman</a><sup>2</sup></div> -->
-        </div>
+          <div class="author-block"><a href="https://homepage.ntu.edu.tw/~sykuo"> Sy-Yen Kuo</a> <sup>1</sup></div>
+          <div class="author-block"><a href="https://sizhuoma.netlify.app/"> Sizhou Ma</a> <sup>2</sup></div>
+          <div class="author-block"><a href="https://jianwang-cmu.github.io/"> Jian Wang</a> <sup>2</sup></div>
 
+        <div class="is-size-5 publication-authors">
+          <span class="author-block"> </sup>* Co-corresponding authors</span>
+        </div>
+        <div class="is-size-5 publication-authors">
+          <span class="author-block"> </sup>(CVPR 2024)</span>
+        </div>
+          
         <div class="is-size-5 publication-authors">
           <span class="author-block"><sup>1</sup>National Taiwan University,</span>
           <span class="author-block"><sup>2</sup>Snap Inc.</span>
