--- a/index.html
+++ b/index.html
@@ -401,16 +401,31 @@
         is the <b>Anti-Degradation Output Token Generation (AOTG)</b> and <b>Anti-Degradation Mask Feature Generation 
         (AMFG)</b> modules, which extract degradation-invariant information that is aligned those extracted from 
         clear images by the original SAM. 
-      </p>
+
       <div class="has-text-centered">
 <!--         <embed src="./robustsam_file/architecture.pdf" width="800px" height="2100px" /> -->
         <img style="width: 100%;" src="./robustsam_file/architecture.jpg"
              alt="RobustSAM architecture."/>
+
+      </p>
+RobustSAM augments the original SAM by incorporating five essential components
+(in purple). During training, clear images are fed through the original SAM modules (in gray) to produce features for clear scenes.
+Subsequently, degraded images, generated through augmentation of clear inputs, are processed by RobustSAM, yielding features for
+degraded scenarios. These are then refined via Anti-degradation modules, ensuring consistency with features from clear scenes. This
+methodology, supported by a segmentation loss, achieves precise segmentation outcomes in both clear and degraded image conditions.
+During inference, only RobustSAM is used to predict a segmentation mask from an input image. Note: The prompt encoder is excluded for
+conciseness, and the padlock icons represent fixed components loaded from the original SAM model that are not updated during training.
+
+        
       </div>
       <h3 class="title is-4">Overview of the proposed AMFG and AOTG modules</h3>
 <!--       <embed src="./robustsam_file/style-suppresion.pdf" width="800px" height="2100px" /> -->
         <img style="width: 100%;" src="./robustsam_file/module.jpg"
              alt="AMFG and AOTG modules."/>
+      </p>
+The Anti-Degradation Mask Feature Generation and Output Token Generation modules significantly enhance image quality and segmentation by normalizing degradation effects while preserving essential content. Utilizing Instance and Batch Normalization, the model stabilizes content under various conditions. A Fourier Degradation Suppression module further isolates degradation, focusing on maintaining structural integrity. These modules ensure the generation of robust, degradation-invariant features for precise image assessment and segmentation.
+
+
       
 <!--       <p>
         HyperNeRF leverages main idea of level set methods by using a template NeRF which lives in
