--- a/index.html
+++ b/index.html
@@ -259,6 +259,15 @@
         <div class="caption">Haze</div>
         <img class="custom-gif" src="./robustsam_file/gif_output/haze_back_n_forth.gif">
     </div>
+    <div class="image-with-caption">
+        <div class="caption">Lowlight</div>
+        <img class="custom-gif" src="./robustsam_file/gif_output/lowlight_back_n_forth.gif">
+    </div>
+    <div class="image-with-caption">
+        <div class="caption">Rain</div>
+        <img class="custom-gif" src="./robustsam_file/gif_output/rain_back_n_forth.gif">
+    </div>
+  
 </div>
 <div class="img-container">
     <div class="image-with-caption">
