--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
       <div class="columns is-centered has-text-centered">
         <div class="column is-three-quarters">
           <p>
-            <b>RobustSAM<b> </i> outperforms with precise boundaries and
+            <b>RobustSAM</b> </i> outperforms with precise boundaries and
             intact structures, where SAM falters with errors and fragmentation.
             Red star points and bounding boxes are our examples' input prompts.
             Click on the arrows or drag to see more results.
