--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <div class="author-block"><a href="https://sites.google.com/view/weitingchen/home">Wei-Ting Chen</a> <sup> 1, 2</sup></div>
           <div class="author-block"><a href="https://github.com/robustsam/RobustSAM"> Yu-Jiet Vong</a> <sup> 1</sup></div>
           <div class="author-block"><a href="https://homepage.ntu.edu.tw/~sykuo"> Sy-Yen Kuo</a> <sup> 1</sup></div>
-          <div class="author-block"><a href="https://sizhuoma.netlify.app/"> Sizhou Ma</a> <sup> 2*</sup></div>
+          <div class="author-block"><a href="https://sizhuoma.netlify.app/"> Sizhuo Ma</a> <sup> 2*</sup></div>
           <div class="author-block"><a href="https://jianwang-cmu.github.io/"> Jian Wang</a> <sup> 2*</sup></div>
 
         <div class="is-size-5 publication-authors">
