--- a/index.html
+++ b/index.html
@@ -216,39 +216,29 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            margin: 20px 0; /* Optional: Adjust the top and bottom margins as needed */
+            width: 100%;
         }
-        .video-wrapper {
-            position: relative;
+        .video-container iframe {
             width: 100%;
             max-width: 560px; /* Optional: Set a max-width if you want */
-            padding-bottom: 56.25%; /* 16:9 aspect ratio */
-            height: 0;
-        }
-        .video-wrapper iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            border: 0;
+            height: auto;
+            aspect-ratio: 16 / 9;
         }
     </style>
 </head>
 <body>
     <h1>Centered YouTube Video</h1>
     <div class="video-container">
-        <div class="video-wrapper">
-            <iframe src="https://www.youtube.com/embed/Awukqkbs6zM?si=vQEW91tN4j_iRJNs" 
-                title="YouTube video player" frameborder="0" 
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                referrerpolicy="strict-origin-when-cross-origin" 
-                allowfullscreen>
-            </iframe>
-        </div>
+        <iframe src="https://www.youtube.com/embed/Awukqkbs6zM?si=vQEW91tN4j_iRJNs" 
+            title="YouTube video player" frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            referrerpolicy="strict-origin-when-cross-origin" 
+            allowfullscreen>
+        </iframe>
     </div>
 </body>
 </html>
+
 
 <!-- <iframe width="560" height="315" 
   src="https://www.youtube.com/embed/Awukqkbs6zM?si=vQEW91tN4j_iRJNs" 
