--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <span class="author-block"> </sup>* Co-corresponding authors</span>
         </div>
         <div class="is-size-5 publication-authors">
-          <span class="author-block"> </sup>(CVPR 2024)</span>
+          <span class="author-block"> </sup>(CVPR 2024 Highlight)</span>
         </div>
           
 
