--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           <div class="publication-links">
             <!-- PDF Link. -->
             <span class="link-block">
-                <a href="https://github.com/robustsam/RobustSAM" 
+                <a href="https://openaccess.thecvf.com/content/CVPR2024/html/Chen_RobustSAM_Segment_Anything_Robustly_on_Degraded_Images_CVPR_2024_paper.html" 
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -124,7 +124,7 @@
                 </a>
               </span>
             <span class="link-block">
-                <a href="https://github.com/robustsam/RobustSAM" 
+                <a href="https://openaccess.thecvf.com/content/CVPR2024/html/Chen_RobustSAM_Segment_Anything_Robustly_on_Degraded_Images_CVPR_2024_paper.html" 
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
