--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 </a>
               </span>
             <span class="link-block">
-                <a href="https://openaccess.thecvf.com/content/CVPR2024/html/Chen_RobustSAM_Segment_Anything_Robustly_on_Degraded_Images_CVPR_2024_paper.html" 
+                <a href="https://arxiv.org/pdf/2406.09627" 
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
